--- a/FrontProactIF/src/main/webapp/connexion.html
+++ b/FrontProactIF/src/main/webapp/connexion.html
@@ -36,7 +36,7 @@
                     if (data.connexion === true) {
                         console.log(data.connexion);
                         $('#message').html('Connexion réussie !');
-                        window.location = "test.html";
+                        window.location = "creerIntervention.html";
                     } else {
                         console.log(data.connexion);
                         $('#message').html('Echec de la connexion');
