Add style for index, connexion, inscription, demandeIntervention

--- a/FrontProactIF/src/main/webapp/cloturerIntervention.html
+++ b/FrontProactIF/src/main/webapp/cloturerIntervention.html
@@ -20,7 +20,7 @@
             function cloture() {
                 var champStatut = $('#champ-statut').val();
                 var champCommentaire = $('#champ-commentaire').val();
-
+                console.log(champStatut + " " + champCommentaire);
                 $.ajax({
                     url: './ActionServlet',
                     method: 'POST',
