--- a/FrontProactIF/src/main/webapp/inscription.html
+++ b/FrontProactIF/src/main/webapp/inscription.html
@@ -12,7 +12,7 @@ and open the template in the editor.
         <link rel = "stylesheet" href = "inscription.css"/>
     </head>
     <body>
-        <h1>Formulaire d'inscription</h1>
+        <h1>Inscription au service ProactIF</h1>
         <form>
             <div class =shape>
                 <span id ="fill">Remplissez tous les champs et inscrivez-vous !</span>
@@ -49,6 +49,7 @@ and open the template in the editor.
                 <span class ="texts">Mot de Passe</span>
                 <input class ="champs" type="password" id = "champ-mdp" name="mdp" placeholder="Mot de Passe">
                 <br><br><br>
+                <input class = "button" id="bouton-accueil" type="button" value="Retour à l'accueil" onclick="location.href = 'index.html'"/>
                 <button id="bouton-inscription">S'inscrire</button>
             </div>
         </form>
