--- a/FrontProactIF/src/main/webapp/interventionCoursClient.html
+++ b/FrontProactIF/src/main/webapp/interventionCoursClient.html
@@ -4,8 +4,15 @@
         <title>Intervention en cours</title>
         <meta charset="UTF-8">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <link rel = "stylesheet" href = "navbar.css"/>
     </head>
     <body>
+        <ul>
+            <li><a href="historique.html">Historique</a></li>
+            <li><a href="creerIntervention.html">Demander une intervention</a></li>
+            <li><a class="active" href="interventionCoursClient.html">Intervention en cours</a></li>
+            <li style="float:right"><a href="#about">Deconnexion</a></li>
+        </ul>
         <h1>Intervention</h1>
         <span>Type :</span>
         <div id ="type"></div>
