--- a/FrontProactIF/src/main/webapp/interventionCoursClient.html
+++ b/FrontProactIF/src/main/webapp/interventionCoursClient.html
@@ -4,6 +4,10 @@
         <title>Intervention en cours</title>
         <meta charset="UTF-8">
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="deconnexion.js"></script>
+        <script>
+            verificationClient();
+        </script>
         <link rel = "stylesheet" href = "navbar.css"/>
     </head>
     <body>
